# d3m_estimator_to_primitive

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
d3m_estimator_to_primitive/: _template.py  _utils.py  cli.py
d3m_estimator_to_primitive/templates/: base.jinja2  supervised.jinja2  test_supervised.jinja2
integration_test/: sklearn_metadata.yml  xgboost_metadata.yml
sklearn_wrap/: SKRidge.py
sklearn_wrap/tests/: test_SKRidge.py
sklearn_wrap/tests-data/datasets/iris_dataset_1/: datasetDoc.json
xgboost_wrap/: D3M_XGBClassifier.py  D3M_XGBRegressor.py
xgboost_wrap/tests/: test_D3M_XGBClassifier.py  test_D3M_XGBRegressor.py
