[metadata]
name = d3m_estimator_to_primitive
version = 0.0.1.dev0
description = D3M primitive converstion tool for scikit-learn
author = Thomas J. Fan
author_email = thomasjpfan@gmail.com
url = https://github.com/thomasjpfan/d3m_estimator_to_primitive
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    docstring-parser==0.7.*
    ruamel.yaml==0.16.*
    scikit-learn==0.22.*
    black==20.8b1
    Jinja2==2.11.*
    autoflake==1.4

packages = d3m_estimator_to_primitive
include_package_data = True

[options.entry_points]
console_scripts =
    estimator_to_primitive = d3m_estimator_to_primitive.cli:main

[options.extras_require]
dev =
    pytest==6.2.*

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py
ignore =
    E20,   # Extra space in brackets
    E231,E241,  # Multiple spaces around ","
    E26,   # Comments
    E4,    # Import formatting
    E721,  # Comparing types instead of isinstance
    E731,  # Assigning lambda expression
    E741,  # Ambiguous variable names
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    F811,  # redefinition of unused 'loop' from line 10
max-line-length = 88
